wmf-deployment: Merge some revs for the upcoming usability deployment (apologies for the mergeinfo noise) * r57541: Add CSS classes for CollapsibleTabs * r57916: Set white-space:nowrap; on Vector tabs for better animating * r58151: Rebuild RTL stylesheet * r58219: Fix watch/unwatch style bug
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/branches/wmf-deployment@59198 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/skins/vector/main-ltr.css
+++ b/skins/vector/main-ltr.css
@@ -141,6 +141,7 @@ body {
 		background-image: url(images/tab-normal-fade.png);
 		background-position: bottom left;
 		background-repeat: repeat-x;
+		white-space:nowrap;
 	}
 	/* IGNORED BY IE6 */
 	div.vectorTabs ul > li {
@@ -1052,6 +1053,7 @@ div#bodyContent {
 /* Watch/Unwatch Icon Styling */
 #ca-unwatch.icon,
 #ca-watch.icon {
+	margin-right:1px;
 }
 #ca-unwatch.icon a,
 #ca-watch.icon a {
@@ -1086,4 +1088,9 @@ div#bodyContent {
 #ca-unwatch.icon a span,
 #ca-watch.icon a span {
 	display: none;
+}
+div.vectorTabs ul {
+	background-image:url(images/tab-break.png);
+	background-position:right bottom;
+	background-repeat:no-repeat;
 }
